<resources>
    <string name="app_name">OaSystem</string>
    <string name="bq_tip">法院移动办公平台</string>

    <string name="pensettingtitle">设置宽度与颜色</string>
    <string name="danwei">单位:</string>
    <string name="dept">部门:</string>
    <string name="position">职务:</string>
    <string name="labwidth">笔宽</string>
    <string name="showall">显示所有签批信息</string>
    <string name="prepage">上一页</string>
    <string name="nextpage">下一页</string>
    <string name="close_text">关闭</string>
    <string name="save_text">保存</string>
    <string name="submit_text">提 交</string>
    <string name="zoom_text">缩放</string>
    <string name="sign_text">签批</string>
    <string name="undo_text">撤销</string>
    <string name="redo_text">还原</string>
    <string name="delete_text">删除</string>
    <string name="resign_text">重签</string>
    <string name="pensetting_text">设置</string>
    <string name="download_waiting">正在下载，请稍后...</string>
    <string name="upload_waiting">正在上传，请稍后...</string>
    <string name="waiting_title">提示</string>
    <string name="waiting">正在加载，请稍后...</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_notice_info">NoticeInfoActivity</string>
    <string name="network_tip">网络连接异常！</string>
    <string name="useraccount_tip">请输入用户名</string>
    <string name="userpassword_tip">请输入密码</string>
    <string name="login">登    录</string>
    <string name="wddbgz_title">我的待办工作</string>
    <string name="home_title">首页</string>
    <string name="meeting_page_title">会议通知</string>
    <string name="lookmore_title">消息中心</string>
    <string name="hytz_title">会议通知</string>
    <string name="notice_detail">通知详情</string>
    <string name="dpgz_title">收文待批:</string>
    <string name="swdp_title">收文待批</string>
    <string name="fwbl_title">发文待批</string>
    <string name="fwdp_title">发文待批</string>
    <string name="xzsp_title">行政待批</string>
    <string name="xzdp_title">行政待批</string>
    <string name="hytz_state_text">未读</string>
    <string name="dpgz_state_text">待批</string>
    <string name="fwbl_state_text">待发</string>
    <string name="tzgg_title_text">消息中心</string>
    <string name="tzgg_title_text1">更多...</string>
    <string name="dpgz_content_text">待批工作</string>
    <string name="bsqk_content_text">办事情况</string>
    <string name="xzsp_content_text">行政审批</string>
    <string name="ypgz_content_text">已批工作</string>
    <string name="hytz_content_text">会议通知</string>
    <string name="fzsw_content_text">非正式文</string>
    <string name="swbl_content_text">收文办理</string>
    <string name="fwbl_content_text">发文办理</string>
    <string name="dzts_content_text">电子图书</string>
    <string name="bayp_content_text">办案已批</string>
    <string name="badp_content_text">办案待批</string>
    <string name="nbwz_content_text">内网网站</string>
    <string name="zxpx_content_text">在线培训</string>
    <string name="bacx_content_text">办案查询</string>
    <string name="wdba_content_text">我的办案</string>
    <string name="rssj_info_title">人事系统</string>
    <string name="nbwz_info_title">内网网站</string>
    <string name="zwsq_info_title">政务申请</string>
    <string name="zxpx_info_title">在线培训</string>
    <string name="notice_info_title">通知详情</string>
    <string name="publish_dept_text">发布部门:</string>
    <string name="publish_time_text">发布时间:</string>
    <string name="publish_user_text">发 布 人:</string>
    <string name="test_text">      习近平指出，在国际社会共同努力下，联合国气候变化巴黎大会成功通过了《巴黎协定》，为2020年后全球合作应对气候变化问题指明了方向和目 标，这是一件造福世界人民的大好事。中美两国及有关各方保持密切沟通，共同为巴黎大会成功作出了积极贡献。巴黎大会是应对气候变化国际合作的新起点，中方 愿同包括美方在内有关各方保持协调合作，确保《巴黎协定》有效实施，拓展应对气候变化领域双边务实合作，更多更好惠及中美两国人民和世界各国人民。中方愿同美方就重大国际问题保持沟通和合作。 　　奥巴马表示，联合国气候变化巴黎大会达成历史性协定，值得祝贺。这是美中两国及有关各方加强协调、通力合作的结果。美方愿同中方及各方共同努力，确保协定生效和落实。美中两国在气候变化问题上的沟通合作表明，我们两国完全能够在广泛国际事务中开展建设性合作。</string>
    <string name="title_activity_common">CommonActivity</string>
    <string name="common_title_text">通知</string>
    <string name="meeting_notice_hf">会议通知回复</string>
    <string name="meeting_notice_ck">会议通知查看</string>
    <string name="title_activity_tree_common">TreeCommonActivity</string>
    <string name="tree_common_title_text">审批</string>
    <string name="title_activity_docsend">发文办理</string>
    <string name="title_activity_docreceive">收文办理</string>
    <string name="title_activity_docfei">非正式文办理</string>
    <string name="title_activity_docalld">待批工作</string>
    <string name="title_activity_docally">已批工作</string>
    <string name="title_activity_banan">办案已批</string>
    <string name="title_activity_banand">办案待批</string>
    <string name="title_activity_banany">办案已批</string>
    <string name="title_activity_oabanan_info">OaBanAnActivity</string>
    <string name="title_activity_book">BookActivity</string>
    <string name="book_title">电子图书</string>
    <string name="title_activity_nbwz">OaNbwzActivity</string>
    <string name="nbwz_title">在线培训</string>
    <string name="title_activity_zxpx">OaZxpxActivity</string>
    <string name="title_activity_jgcj">JGCJActivity</string>
    <string name="jgcj_title">金格注册</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="setting_title">设置</string>
    <string name="name_title">姓名：</string>
    <string name="units_title">所在单位：</string>
    <string name="department_title">所在部门：</string>
    <string name="job_title">所任职务：</string>
    <string name="updata_password_title">修改密码</string>
    <string name="logout_title">退出登录</string>
    <string name="clear">清理缓存</string>
    <string name="isopen">推送通知</string>
    <string name="title_activity_sp_info">SpInfoActivity</string>
    <string name="sp_info_title">审批详情</string>
    <string name="progress_title">进度:</string>
    <string name="zw_title">正文:</string>
    <string name="lc_title">流程:</string>
    <string name="fj_title">附件:</string>
    <string name="download_text">下载</string>
    <string name="cat_text">查看</string>
    <string name="ty_text">同意</string>
    <string name="bty_text">不同意</string>
    <string name="cypy_text">常用批语</string>
    <string name="return_text">返回</string>
    <string name="send_text">发送</string>
    <string name="aj_info_title">案件详情</string>
    <string name="ajsl_title">案件数量</string>
    <string name="wcbajs_title">我承办案件</string>
    <string name="wcyajs_title">我参与案件</string>
    <string name="spsl_title">审批数量</string>
    <string name="dspajs_title">待审批</string>
    <string name="dspxsqajs_title">待审批新申请</string>
    <string name="wsqspzajs_title">我申请审批中</string>
    <string name="wsqxsqajs_title">我申请新申请</string>
    <string name="cxsl_title">超审限案件数量</string>
    <string name="jcsxajs_title">将超审限</string>
    <string name="ycsxajs_title">已超审限</string>
    <string name="fhqcr">不同意</string>
    <string name="fhdjr">不同意</string>
    <string name="end_text">同意</string>
    <string name="remark">注：同意即返回起草人继续办理,不同意即返回起草人修改</string>
    <string name="qz_text">审批流程</string>
    <string name="qz_text_h">流程</string>
    <string name="yue_text">审阅</string>
    <string name="check_text">查看正文</string>
    <string name="title_activity_updata_password">UpdataPasswordActivity</string>
    <string name="old_pass">旧 密 码 ：</string>
    <string name="new_pass">新 密 码 ：</string>
    <string name="submit_new_pass">确认密码：</string>
    <string name="input_old_pass">请输入旧密码</string>
    <string name="input_new_pass">请输入新密码</string>
    <string name="again_input_new_pass">请输入确认密码</string>
    <string name="title_activity_oa_meeting_show_activity_for_hf">OaMeetingShowActivityForHf</string>
    <string name="hello_world">Hello world!</string>
    <string name="meeting_place">会议地点:</string>
    <string name="meeting_begintime">开始时间：</string>
    <string name="meeting_endtime">结束时间:</string>
    <string name="meeting_man_zhuchi">主 持 人:</string>
    <string name="meeting_kaihuiren">会议人员:</string>
    <string name="meeting_tcontent">会议内容:</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，是否立即更新</string>
    <string name="soft_qzupdate_info">新版本请立即更新</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="title_activity_oa_zwsq">OaZwsqActivity</string>
    <string name="title_activity_hr">HrActivity</string>

    <string name="hello">Hello World, docReader!</string>
    <string name="aboutauthor">关于作者</string>
    <string name="aboutprogram">关于文件</string>
    <string name="gotit">我知道了</string>
    <string name="author">作者：边利军\n指导老师:周庆国\n邮箱：junbianli@gmail.com\n兰州大学飞云楼532\n兰州大学信息科学与学院Dslab(c)</string>
    <string name="paragrap">段落个数：</string>
    <string name="word">文字个数：</string>
    <string name="tables">表格个数：</string>
    <string name="pictures">图片个数：</string>
</resources>
