<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@+id/id_title" layout="@layout/layout_setting_title" />
    <RelativeLayout android:id="@+id/user_infoRlt" android:background="@color/bg_color" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:layout_below="@+id/id_title">
        <ImageView android:id="@+id/user_iconIv" android:background="@mipmap/ic_launcher" android:layout_width="75.0dip" android:layout_height="75.0dip" android:layout_centerVertical="true" />
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_toRightOf="@+id/user_iconIv" android:layout_alignParentRight="true" android:layout_centerVertical="true">
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textSize="16.0sp" android:textColor="@color/content_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/name_title" android:singleLine="true" />
                <TextView android:textSize="14.0sp" android:textColor="@color/content_text_color" android:id="@+id/user_nameTv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
            </LinearLayout>
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textSize="16.0sp" android:textColor="@color/content_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/units_title" android:singleLine="true" />
                <TextView android:textSize="14.0sp" android:textColor="@color/content_text_color" android:id="@+id/user_genderTv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
            </LinearLayout>
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textSize="16.0sp" android:textColor="@color/content_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/department_title" android:singleLine="true" />
                <TextView android:textSize="14.0sp" android:textColor="@color/content_text_color" android:id="@+id/user_nationTv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
            </LinearLayout>
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textSize="16.0sp" android:textColor="@color/content_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/job_title" android:singleLine="true" />
                <TextView android:textSize="14.0sp" android:textColor="@color/content_text_color" android:id="@+id/user_jobTv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/updataPasswordRlt"
        android:background="@color/bg_color" android:padding="5.0dip"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:layout_margin="5.0dip" android:layout_below="@+id/user_infoRlt">
        <TextView android:textSize="20.0sp" android:textColor="@color/content_text_color"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/updata_password_title" android:singleLine="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@+id/isopen" android:background="@color/bg_color" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:layout_below="@+id/updataPasswordRlt">
        <TextView android:textSize="20.0sp" android:textColor="@color/content_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/isopen" android:singleLine="true" />
        <CheckBox android:id="@+id/checkBox1" android:layout_width="wrap_content" android:layout_height="28.0dip" android:layout_marginRight="10.0dip" android:text="开启" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@+id/clear" android:background="@color/bg_color" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:layout_below="@+id/isopen">
        <TextView android:textSize="20.0sp" android:textColor="@color/content_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/clear" android:singleLine="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@+id/logOutRlt" android:background="@color/bg_color" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:layout_marginTop="20.0dip" android:layout_below="@+id/clear" android:layout_alignParentRight="true">
        <TextView android:textSize="20.0sp" android:textColor="@color/content_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/logout_title" android:singleLine="true" />
    </RelativeLayout>
</RelativeLayout>
