<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/title_text_color">
    <include android:id="@+id/id_title" layout="@layout/layout_setting_title" />
    <RelativeLayout android:id="@+id/updataPasswordRlt"
        android:background="@color/title_text_color"
        android:padding="10.0dip" android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:layout_margin="10.0dip"
        android:layout_below="@+id/id_title">
        <TextView android:textSize="20.0sp" android:textColor="@color/content_text_color"
            android:id="@+id/old_pass_text" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/old_pass"
            android:singleLine="true" />
        <EditText android:id="@+id/edt_old_password"
            android:imeOptions="actionNext" android:singleLine="true"
            android:nextFocusForward="@+id/edt_name" android:layout_below="@+id/old_pass_text"
            android:layout_width="match_parent" android:background="@drawable/editshape"
            android:layout_height="wrap_content" android:layout_marginTop="10dp"/>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/logOutRlt" android:background="@color/title_text_color" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:layout_below="@+id/updataPasswordRlt">
        <TextView android:textSize="20.0sp" android:textColor="@color/content_text_color"
            android:id="@+id/new_pass_text" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/new_pass"
            android:singleLine="true" />
        <EditText android:id="@+id/edt_new_password"
            android:imeOptions="actionNext" android:singleLine="true"
            android:nextFocusForward="@+id/edt_name" android:layout_below="@+id/new_pass_text"
            android:layout_width="match_parent" android:background="@drawable/editshape"
            android:layout_height="wrap_content" android:layout_marginTop="10dp"/>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/saveRlt" android:background="@color/title_text_color"
        android:padding="10.0dip" android:layout_width="200.0dip"
        android:layout_height="wrap_content" android:layout_margin="10.0dip"
        android:layout_below="@+id/logOutRlt" android:layout_centerHorizontal="true">
        <Button android:textSize="20.0sp" android:textColor="#ffff"
            android:id="@+id/btn_save" android:layout_width="match_parent"
            android:background="@drawable/btnshape"
            android:layout_height="wrap_content" android:text="@string/save_text"
            android:singleLine="true" android:layout_centerInParent="true" />
    </RelativeLayout>
</RelativeLayout>
