<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_horizontal" android:background="@color/WhiteSmoke"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/id_title" layout="@layout/layout_setting_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:orientation="vertical">
    <RelativeLayout android:id="@+id/user_infoRlt" android:background="@color/title_text_color"
        android:padding="10.0dip" android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content" android:layout_below="@+id/id_title">
        <ImageView android:id="@+id/user_iconIv" android:background="@mipmap/ic_launcher"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_centerVertical="true" />
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginLeft="10.0dip"
            android:layout_toRightOf="@+id/user_iconIv" android:layout_alignParentRight="true"
            android:layout_centerVertical="true">

                <TextView android:textSize="14.0sp" android:textColor="@color/content_text_color"
                    android:id="@+id/user_nameTv" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="用户名" />

                <TextView android:textSize="14.0sp" android:textColor="@color/content_text_color"
                    android:id="@+id/user_genderTv" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="15776706239"
                    android:layout_marginTop="5dp"/>

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout android:id="@+id/danwei"
        android:background="@color/title_text_color" android:padding="5.0dip"
        android:layout_width="fill_parent" android:layout_height="45dp"
        android:layout_below="@+id/user_infoRlt" android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="wrap_content" android:background="@drawable/home"
            android:id="@+id/iv_danwei" android:layout_marginLeft="20dp"
            android:layout_height="wrap_content" android:layout_centerVertical="true"/>
        <TextView android:textSize="20.0sp" android:textColor="@color/content_text_color"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/danwei" android:layout_toRightOf="@+id/iv_danwei"
            android:layout_marginLeft="20dp" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@+id/dept" android:background="@color/title_text_color"
        android:padding="5.0dip" android:layout_width="fill_parent"
        android:layout_height="45dp" android:layout_below="@+id/danwei">
        <ImageView
            android:layout_width="wrap_content" android:background="@drawable/home"
            android:id="@+id/iv_dept" android:layout_marginLeft="20dp"
            android:layout_height="wrap_content" android:layout_centerVertical="true"/>
        <TextView android:textSize="20.0sp" android:textColor="@color/content_text_color"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/dept" android:layout_toRightOf="@+id/iv_dept"
            android:layout_marginLeft="20dp" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@+id/position" android:background="@color/title_text_color"
        android:padding="5.0dip" android:layout_width="fill_parent"
        android:layout_height="45dp" android:layout_below="@+id/dept">
        <ImageView
            android:layout_width="wrap_content" android:background="@drawable/home"
            android:id="@+id/iv_position" android:layout_marginLeft="20dp"
            android:layout_height="wrap_content" android:layout_centerVertical="true"/>
        <TextView android:textSize="20.0sp" android:textColor="@color/content_text_color"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/position"  android:layout_toRightOf="@+id/iv_position"
            android:layout_marginLeft="20dp" android:layout_centerVertical="true"/>
    </RelativeLayout>

    <RelativeLayout android:id="@+id/updataPasswordRlt"
        android:background="@color/title_text_color" android:padding="5.0dip"
        android:layout_width="fill_parent" android:layout_height="45dp"
        android:layout_below="@+id/position" android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="wrap_content" android:background="@drawable/home"
            android:id="@+id/iv_update" android:layout_marginLeft="20dp"
            android:layout_height="wrap_content" android:layout_centerVertical="true"/>
        <TextView android:textSize="20.0sp" android:textColor="@color/content_text_color"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/updata_password_title" android:layout_toRightOf="@+id/iv_update"
            android:layout_marginLeft="20dp" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@+id/isopen" android:background="@color/title_text_color"
        android:padding="5.0dip" android:layout_width="fill_parent"
        android:layout_height="45dp" android:layout_below="@+id/updataPasswordRlt">
        <ImageView
            android:layout_width="wrap_content" android:background="@drawable/home"
            android:id="@+id/iv_tuisong" android:layout_marginLeft="20dp"
            android:layout_height="wrap_content" android:layout_centerVertical="true"/>
        <TextView android:textSize="20.0sp" android:textColor="@color/content_text_color"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/isopen" android:layout_toRightOf="@+id/iv_tuisong"
            android:layout_marginLeft="20dp" android:layout_centerVertical="true" />
        <CheckBox android:id="@+id/checkBox1" android:layout_width="wrap_content"
            android:layout_height="28.0dip" android:layout_marginRight="10.0dip"
            android:text="开启"
            android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@+id/clear" android:background="@color/title_text_color"
        android:padding="5.0dip" android:layout_width="fill_parent"
        android:layout_height="45dp" android:layout_below="@+id/isopen">
        <ImageView
            android:layout_width="wrap_content" android:background="@drawable/home"
            android:id="@+id/iv_clear" android:layout_marginLeft="20dp"
            android:layout_height="wrap_content" android:layout_centerVertical="true"/>
        <TextView android:textSize="20.0sp" android:textColor="@color/content_text_color"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/clear"  android:layout_toRightOf="@+id/iv_clear"
            android:layout_marginLeft="20dp" android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/logOutRlt" android:background="@color/title_text_color"
        android:padding="5.0dip" android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20.0dip" android:layout_below="@+id/clear"
        android:layout_alignParentRight="true">
        <ImageView
            android:layout_width="wrap_content" android:background="@drawable/home"
            android:id="@+id/iv_exit" android:layout_marginLeft="20dp"
            android:layout_height="wrap_content" android:layout_centerVertical="true"/>
        <TextView android:textSize="20.0sp" android:textColor="@color/content_text_color"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/logout_title" android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/iv_exit" android:layout_marginLeft="20dp"/>
    </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>